<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="18dp"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtNamaMain"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/avenir_medium"
            android:hint="@string/nama"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtAlamatMain"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtNamaMain"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtAlamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/avenir_medium"
            android:hint="@string/alamat"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtHpMain"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtAlamatMain"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtHp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/avenir_medium"
            android:hint="@string/hp"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/tvJenisKelamin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/avenir_medium"
        android:text="@string/tvJenisKelamin"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/rgJenisKelamin"
        app:layout_constraintStart_toStartOf="@+id/txtHpMain"
        app:layout_constraintTop_toBottomOf="@id/txtHpMain" />

    <RadioGroup
        android:id="@+id/rgJenisKelamin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvJenisKelamin"
        app:layout_constraintTop_toBottomOf="@+id/txtHpMain">

        <RadioButton
            android:id="@+id/rbPria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/rbPria" />

        <RadioButton
            android:id="@+id/rbWanita"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbWanita" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvLokasiMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/avenir_medium"
        android:text="@string/tvLokasi"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvJenisKelamin"
        app:layout_constraintTop_toBottomOf="@id/tvJenisKelamin" />

    <TextView
        android:id="@+id/tvLokasi"
        android:layout_width="197dp"
        android:layout_height="26dp"
        android:fontFamily="@font/avenir_bold"
        app:layout_constraintBottom_toBottomOf="@+id/btnLokasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvLokasiMain"
        app:layout_constraintTop_toTopOf="@+id/btnLokasi" />

    <Button
        android:id="@+id/btnLokasi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLokasi"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/tvLokasiMain"
        app:layout_constraintStart_toStartOf="@+id/tvLokasiMain"
        app:layout_constraintTop_toBottomOf="@+id/tvLokasiMain"/>

    <TextView
        android:id="@+id/tvUploadMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/avenir_medium"
        android:text="@string/tvUpload"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tvJenisKelamin"
        app:layout_constraintTop_toBottomOf="@id/btnLokasi" />
</androidx.constraintlayout.widget.ConstraintLayout>